[gd_scene load_steps=4 format=3 uid="uid://c8nmn0pkh7rpt"]

[ext_resource type="Theme" uid="uid://jrlselt3bfqh" path="res://Art/UI/StandardButton.tres" id="1_5puy1"]
[ext_resource type="Script" path="res://UI/Menus/Server Connecting/Components/character_select.gd" id="2_n6ltl"]
[ext_resource type="Texture2D" uid="uid://diisvkicbrdae" path="res://Art/UI/HUD/Character Heads/dwight-head.png" id="3_io4sf"]

[node name="CharacterSelect" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 117.0
offset_top = -7.0
offset_right = -423.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8042, 1.30796)
theme = ExtResource("1_5puy1")
script = ExtResource("2_n6ltl")

[node name="UserId" type="Label" parent="."]
layout_mode = 2
text = "Player: x"

[node name="charDisplay" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_io4sf")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="leftCharSelect" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "<"

[node name="CharName" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Dwight"

[node name="rightCharSelect" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ">"

[connection signal="pressed" from="HBoxContainer/leftCharSelect" to="." method="_on_left_char_select_pressed"]
[connection signal="pressed" from="HBoxContainer/rightCharSelect" to="." method="_on_right_char_select_pressed"]
